<resources>
    <string name="app_name">taskmaster</string>
    <string name="title">My Tasks</string>
    <string name="all_tasks_btn">All Tasks</string>
    <string name="add_task_btn">Add Task</string>
    <string name="the_tasks_within_the_main_activity">the tasks within the main activity</string>
    <string name="my_task">My Task</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="do_something">Do Something</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks">Total Tasks :</string>
    <string name="_0">0</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos
sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
recusandae alias error harum maxime adipisci amet laborum. Perspiciatis
minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit
quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur
fugiat, temporibus enim commodi iusto libero magni deleniti quod quam
consequuntur! Commodi minima excepturi repudiandae velit hic maxime</string>
    <string name="settings">Settings</string>
    <string name="user_details">User Details</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="pref_key">MyPrefs</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_image_represens_the_settings">this image represens the settings</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="please_log_in">Please Log in</string>
    <string name="email">Email</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="enter_the_code_sent_to_your_email">Enter the code sent to your Email</string>
    <string name="confirm">Confirm</string>
    <string name="the_code_is_wrong_try_again">The code is wrong, Try again</string>
    <string name="attach_file">Attach File</string>
    <string name="this_image_is_attached_to_the_task">this image is attached to the task</string>
</resources>