<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="145dp"
        android:layout_height="32dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/addTskBtn"
        android:layout_width="153dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:onClick="addTask"
        android:text="@string/add_task_btn"
        android:textColor="#373636"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/button2"
        android:layout_width="153dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="68dp"
        android:onClick="allTask"
        android:text="@string/all_tasks_btn"
        android:textColor="#2C2C2C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/addTskBtn"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.961" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="297dp"
        android:layout_height="322dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/ic_baseline_format_align_justify_24"
        android:contentDescription="@string/the_tasks_within_the_main_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>