<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/textView"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:fontFamily="sans-serif"
        android:text="@string/add_task"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/taskTitleEditText"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginBottom="312dp"
        android:autofillHints="type the taskOG title"
        android:ems="10"
        android:hint="@string/my_task"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.318" />

    <EditText
        android:id="@+id/taskBodyEditText"
        android:layout_width="331dp"
        android:layout_height="86dp"
        android:autofillHints="type what you want to do"
        android:ems="10"
        android:hint="@string/do_something"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleEditText"
        app:layout_constraintVertical_bias="0.139"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/addTskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="taskAdd"
        android:text="@string/add_task"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBodyEditText"
        app:layout_constraintVertical_bias="0.382"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/taskTitleEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/taskTitleEditText"
        app:layout_constraintTop_toTopOf="@+id/taskTitleEditText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/taskBodyEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/taskBodyEditText"
        app:layout_constraintTop_toTopOf="@+id/taskBodyEditText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTskButton"
        app:layout_constraintVertical_bias="0.503" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="353dp"
        android:layout_height="62dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBodyEditText"
        app:layout_constraintVertical_bias="0.050000012">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="Team 1" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:text="Team 2" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:text="Team 3" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>