<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetails">

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/task_title"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/taskState"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/task_title"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/taskBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/taskBody"
        android:layout_width="328dp"
        android:layout_height="99dp"
        android:text="@string/lorem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
        app:layout_constraintVertical_bias="0.152" />

    <ImageView
        android:id="@+id/imageTaskDetails"
        android:layout_width="312dp"
        android:layout_height="130dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/this_image_is_attached_to_the_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBody"
        app:layout_constraintVertical_bias="0.838" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="324dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toTopOf="@+id/imageTaskDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBody"
        app:layout_constraintVertical_bias="0.416"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>